ollama/deployment-ollama.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ollama
  namespace: ollama
  labels:
    app: ollama
    app.kubernetes.io/name: ollama
    app.kubernetes.io/instance: ollama
    app.kubernetes.io/part-of: ollama
    app.kubernetes.io/managed-by: argoCD
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: ollama
  template:
    metadata:
      labels:
        app: ollama
        app.kubernetes.io/name: ollama
        app.kubernetes.io/part-of: ollama
    spec:
      automountServiceAccountToken: false
      priorityClassName: homelab-best-effort
      runtimeClassName: nvidia
      enableServiceLinks: false
      nodeSelector:
        nvidia.com/gpu.present: "true"
      containers:
        - name: ollama
          image: harbor.andreybondarenko.com/dockerhub/ollama/ollama:0.35.1
          imagePullPolicy: IfNotPresent
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 65532
            runAsGroup: 65532
            seccompProfile:
              type: RuntimeDefault
          ports:
            - name: http
              containerPort: 11434
          startupProbe:
            tcpSocket:
              port: http
            periodSeconds: 10
            failureThreshold: 60
          readinessProbe:
            tcpSocket:
              port: http
            periodSeconds: 10
            failureThreshold: 3
          livenessProbe:
            tcpSocket:
              port: http
            periodSeconds: 30
            failureThreshold: 3
          resources:
            requests:
              cpu: 25m
              memory: 6400Mi
            limits:
              memory: 12Gi
              nvidia.com/gpu: 1
          volumeMounts:
            - name: ollama-data
              mountPath: /ollama
            - name: tmp
              mountPath: /tmp
        - name: model-puller
          image: harbor.andreybondarenko.com/dockerhub/ollama/ollama:0.35.1
          imagePullPolicy: IfNotPresent
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 65532
            runAsGroup: 65532
            seccompProfile:
              type: RuntimeDefault
          command:
            - /bin/sh
            - -c
            - |
              [...]
          resources:
            requests:
              cpu: 25m
              memory: 128Mi
            limits:
              memory: 256Mi
          volumeMounts:
            - name: tmp
              mountPath: /tmp
      volumes:
        - name: ollama-data
          persistentVolumeClaim:
            claimName: ollama-data-lh
        - name: tmp
          emptyDir: {}
